--- a/index.html
+++ b/index.html
@@ -4,8 +4,117 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sweety</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body></body>
-</html>
+  <body>
+    <header>
+      <a href="" class="logo">Sweety</a>
+      <!-- for bigger screen -->
+      <nav>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Features</a></li>
+          <li><a href="">Products</a></li>
+          <li><a href="">Categories</a></li>
+          <li><a href="">Review</a></li>
+          <li><a href="">Blogs</a></li>
+        </ul>
+      </nav>
+      <div class="icon">
+        <!-- mobile tablet -->
+        <i class="fa-solid fa-bars " id="menu-btn">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Features</a></li>
+            <li><a href="">Products</a></li>
+          </ul>
+        </i>
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <i class="fa-solid fa-cart-shopping"></i>
+        <i class="fa-solid fa-user"></i>
+      </div>
+    </header>
+    <main>
+      <section class="home">
+        <h2>Tasty and <span>organic</span> treats</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+          neque aut modi alias deleniti accusantium!
+        </p>
+        <a href="" class="btn">shop now</a>
+      </section>
+      <!-- cards -->
+      <section class="box-container">
+        <div class="box">
+          <img src="images/donut1.png" alt="" />
+          <h3>lemon zest</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, rem!
+          </p>
+          <a href="" class="btn">read more</a>
+        </div>
+        <div class="box">
+          <img src="images/donut2.png" alt="" />
+          <h3>lemon zest</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, rem!
+          </p>
+          <a href="" class="btn">read more</a>
+        </div>
+        <div class="box">
+          <img src="images/donut3.png" alt="" />
+          <h3>lemon zest</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, rem!
+          </p>
+          <a href="" class="btn">read more</a>
+        </div>
+        <div class="box">
+          <img src="images/donut4.png" alt="" />
+          <h3>lemon zest</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, rem!
+          </p>
+          <a href="" class="btn">read more</a>
+        </div>
+        <div class="box">
+          <img src="images/donut5.png" alt="" />
+          <h3>lemon zest</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, rem!
+          </p>
+          <a href="" class="btn">read more</a>
+        </div>
+        <div class="box">
+          <img src="images/donut6.png" alt="" />
+          <h3>lemon zest</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, rem!
+          </p>
+          <a href="" class="btn">read more</a>
+        </div>
+        <div class="box">
+          <img src="images/donut6.png" alt="" />
+          <h3>lemon zest</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, rem!
+          </p>
+          <a href="" class="btn">read more</a>
+        </div>
+        <div class="box">
+          <img src="images/donut6.png" alt="" />
+          <h3>lemon zest</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, rem!
+          </p>
+          <a href="" class="btn">read more</a>
+        </div>
+      </section>
